--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://java.sun.com/jsf/html">
+        xmlns:h="http://java.sun.com/jsf/html"
+        xmlns:f="http://java.sun.com/jsf/core">
 	<h:body>
 		<h1>Novo Livro</h1>
 		<h:form>
@@ -18,6 +19,20 @@
 					<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento}"/>
 					<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
 				</h:panelGrid>
+			</fieldset>
+			<fieldset>
+				<legend>Dados do Autor</legend>
+				<h:outputLabel value="Selecione Autor:" for="autor" />
+				<h:selectOneMenu id="autor" value="#{livroBean.autorId}">
+					<f:selectItems value="#{livroBean.autores}" var="autor"
+						itemLabel="#{autor.nome}" itemValue="#{autor.id}"/>
+				</h:selectOneMenu>
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+					<h:column>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+				</h:dataTable>
+				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
 			</fieldset>
 		</h:form>
 	</h:body>
