--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -6,17 +6,26 @@
 	<h:body>
 		<h1>Novo Livro</h1>
 		<h:form>
+			<h:messages />
 			<fieldset>
 				<legend>Dados do Livro</legend>
 				<h:panelGrid columns="2">
 					<h:outputLabel value="Título" for="titulo" />
-					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"/>
+					<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" 
+						requiredMessage="Título obrigatório"
+						validatorMessage="Título não pode ser superior a 40">
+						<f:validateLength maximum="40"/>
+					</h:inputText>
 					<h:outputLabel value="ISBN" for="isbn" />
-					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"/>
+					<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}"/>
 					<h:outputLabel value="Preço" for="preco" />
-					<h:inputText id="preco" value="#{livroBean.livro.preco}"/>
+					<h:inputText id="preco" value="#{livroBean.livro.preco}" label="Preço">
+						<f:validateDoubleRange minimum="1.0" maximum="1000.00"/>
+					</h:inputText>
 					<h:outputLabel value="Data de Lançamento" for="dataLancamento" />
-					<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento}"/>
+					<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy HH:mm"/>
+					</h:inputText>
 					<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
 				</h:panelGrid>
 			</fieldset>
@@ -35,5 +44,32 @@
 				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
 			</fieldset>
 		</h:form>
+		
+		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro">
+		
+			<h:column>
+				<f:facet name="header">Título</f:facet>
+				<h:outputText value="#{livro.titulo}" />
+			</h:column>
+			
+			<h:column>
+				<f:facet name="header">ISBN</f:facet>
+				<h:outputText value="#{livro.isbn}" />
+			</h:column>
+			
+			<h:column>
+				<f:facet name="header">Preço</f:facet>
+				<h:outputText value="#{livro.preco}" />
+			</h:column>
+			
+			<h:column>
+				<f:facet name="header">Data</f:facet>
+				<h:outputText value="#{livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"/>
+				</h:outputText>
+			</h:column>
+			
+		</h:dataTable>
+		
 	</h:body>
 </html>
