--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -40,7 +40,7 @@
 						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 					</h:inputText>
 					<h:commandButton value="Gravar" action="#{livroBean.gravar}">
-						<f:ajax execute="@form" render="@form :tabelaLivros" />
+						<f:ajax execute="@form" render="@form :formTabelaLivros:tabelaLivros" />
 					</h:commandButton>
 				</h:panelGrid>
 			</fieldset>
@@ -56,6 +56,9 @@
 					<h:column>
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
+					<h:column>
+						<h:commandLink action="#{livroBean.removerAutorDoLivro(autor)}" value="X" immediate="true"/>
+					</h:column>
 				</h:dataTable>
 				<h:commandButton value="Gravar Autor"
 					action="#{livroBean.gravarAutor}">
@@ -68,31 +71,49 @@
 			</fieldset>
 		</h:form>
 
-		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro">
+		<h:form id="formTabelaLivros">
+			<h:dataTable id="tabelaLivros" value="#{livroBean.livros}"
+				var="livro">
 
-			<h:column>
-				<f:facet name="header">Título</f:facet>
-				<h:outputText value="#{livro.titulo}" />
-			</h:column>
+				<h:column>
+					<f:facet name="header">Título</f:facet>
+					<h:outputText value="#{livro.titulo}" />
+				</h:column>
 
-			<h:column>
-				<f:facet name="header">ISBN</f:facet>
-				<h:outputText value="#{livro.isbn}" />
-			</h:column>
+				<h:column>
+					<f:facet name="header">ISBN</f:facet>
+					<h:outputText value="#{livro.isbn}" />
+				</h:column>
 
-			<h:column>
-				<f:facet name="header">Preço</f:facet>
-				<h:outputText value="#{livro.preco}" />
-			</h:column>
+				<h:column>
+					<f:facet name="header">Preço</f:facet>
+					<h:outputText value="#{livro.preco}">
+						<f:convertNumber type="currency" pattern="R$ #0.00"
+							currencySymbol="R$" locale="pt_BR" />
+					</h:outputText>
+				</h:column>
 
-			<h:column>
-				<f:facet name="header">Data</f:facet>
-				<h:outputText value="#{livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
-				</h:outputText>
-			</h:column>
+				<h:column>
+					<f:facet name="header">Data</f:facet>
+					<h:outputText value="#{livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+					</h:outputText>
+				</h:column>
 
-		</h:dataTable>
+				<h:column>
+					<f:facet name="header">Remover</f:facet>
+					<h:commandLink value="Remover" action="#{livroBean.remover(livro)}" />
+				</h:column>
+				
+				<h:column>
+					<f:facet name="header">Alterar</f:facet>
+					<h:commandLink value="Alterar">
+						<f:setPropertyActionListener value="#{livro}" target="#{livroBean.livro}" />
+					</h:commandLink>
+				</h:column>
+
+			</h:dataTable>
+		</h:form>
 	</ui:define>
 
 </ui:composition>
