--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="/_template.xhtml">
 
+	<f:metadata>
+	    <f:viewParam name="livroId" value="#{livroBean.livroId}"/>
+	    <f:viewAction action="#{livroBean.carregaLivroPeloId}" if="#{param['livroId'] != null}"/>
+	</f:metadata>
+	
 	<ui:define name="titulo">
-			Novo Livro
-		</ui:define>
+		Novo Livro
+	</ui:define>
 
 	<ui:define name="conteudo">
 		<h:form>
@@ -40,7 +45,8 @@
 						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 					</h:inputText>
 					<h:commandButton value="Gravar" action="#{livroBean.gravar}">
-						<f:ajax execute="@form" render="@form :formTabelaLivros:tabelaLivros" />
+						<f:ajax execute="@form"
+							render="@form :formTabelaLivros:tabelaLivros" />
 					</h:commandButton>
 				</h:panelGrid>
 			</fieldset>
@@ -57,7 +63,8 @@
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
 					<h:column>
-						<h:commandLink action="#{livroBean.removerAutorDoLivro(autor)}" value="X" immediate="true"/>
+						<h:commandLink action="#{livroBean.removerAutorDoLivro(autor)}"
+							value="X" immediate="true" />
 					</h:column>
 				</h:dataTable>
 				<h:commandButton value="Gravar Autor"
@@ -104,11 +111,12 @@
 					<f:facet name="header">Remover</f:facet>
 					<h:commandLink value="Remover" action="#{livroBean.remover(livro)}" />
 				</h:column>
-				
+
 				<h:column>
 					<f:facet name="header">Alterar</f:facet>
 					<h:commandLink value="Alterar">
-						<f:setPropertyActionListener value="#{livro}" target="#{livroBean.livro}" />
+						<f:setPropertyActionListener value="#{livro}"
+							target="#{livroBean.livro}" />
 					</h:commandLink>
 				</h:column>
 
