Autorização pelo PhaseListener

--- a/src/main/webapp/_template.xhtml
+++ b/src/main/webapp/_template.xhtml
@@ -17,7 +17,11 @@
       		</div>
       		
       		<div id="rodape">
+      			<br/>
+      			<br/>
       			<span>&#169;</span> Evandro Lovato Krzyzanovski
+      			<br/>
+      			<h:outputText value="Usuário Logado: #{sessionScope['usuarioLogado'].email}" />
       			<ui:insert name="texto">
       			</ui:insert>
       		</div>
