--- a/src/main/webapp/_template.xhtml
+++ b/src/main/webapp/_template.xhtml
@@ -1,7 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
       <h:head />
       <h:body>
@@ -24,9 +25,9 @@
       		<div id="rodape">
       			<br/>
       			<br/>
-      			<span>&#169;</span> Evandro Lovato Krzyzanovski
+      			<p:outputLabel><span>&#169;</span> Evandro Lovato Krzyzanovski</p:outputLabel>
       			<br/>
-      			<h:outputText value="Usuário Logado: #{sessionScope['usuarioLogado'].email}" />
+      			<p:outputLabel value="Usuário Logado: #{sessionScope['usuarioLogado'].email}" rendered="#{usuarioLogado != null}"/>
       			<ui:insert name="texto">
       			</ui:insert>
       		</div>
