--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -69,7 +69,7 @@
 					</p:column>
 					<p:column>
 						<p:commandLink action="#{livroBean.removerAutorDoLivro(autor)}" update="tabelaAutores"
-							 process="@this" styleClass="ui-icon ui-icon-trash" />
+							 process="@this" styleClass="ui-icon ui-icon-trash" value="X" />
 					</p:column>
 				</p:dataTable>
 			</p:fieldset>
@@ -79,48 +79,48 @@
 		</h:form>
 
 		<h:form id="formTabelaLivros">
-			<h:dataTable id="tabelaLivros" value="#{livroBean.livros}"
-				var="livro">
-
-				<h:column>
-					<f:facet name="header">Título</f:facet>
+			<p:dataTable id="tabelaLivros" value="#{livroBean.livros}"
+				var="livro" paginator="true" rows="5">
+				
+				<f:facet name="header">Livros</f:facet>
+				
+				<p:column headerText="Título" sortBy="#{livro.titulo}"
+					filterBy="#{livro.titulo}" filterMatchMode="startsWith">
 					<h:outputText value="#{livro.titulo}" />
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">ISBN</f:facet>
+				<p:column headerText="ISBN" sortBy="#{livro.isbn}" filterBy="#{livro.isbn}"
+					filterMatchMode="contains">
 					<h:outputText value="#{livro.isbn}" />
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">Preço</f:facet>
+				<p:column headerText="Preço" sortBy="#{livro.preco}" filterBy="#{livro.preco}"
+					filterFunction="#{livroBean.precoEhMenor}">
 					<h:outputText value="#{livro.preco}">
 						<f:convertNumber type="currency" pattern="R$ #0.00"
 							currencySymbol="R$" locale="pt_BR" />
 					</h:outputText>
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">Data</f:facet>
+				<p:column headerText="Data" sortBy="#{livro.dataLancamento.time}" filterBy="#{livro.dataLancamento.time}"
+					filterMatchMode="contains">
 					<h:outputText value="#{livro.dataLancamento.time}">
 						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 					</h:outputText>
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">Remover</f:facet>
+				<p:column headerText="Remover">
 					<h:commandLink value="Remover" action="#{livroBean.remover(livro)}" />
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">Alterar</f:facet>
+				<p:column headerText="Alterar">
 					<h:commandLink value="Alterar">
 						<f:setPropertyActionListener value="#{livro}"
 							target="#{livroBean.livro}" />
 					</h:commandLink>
-				</h:column>
+				</p:column>
 
-			</h:dataTable>
+			</p:dataTable>
 		</h:form>
 	</ui:define>
 
